# fragment-cloud

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  TODO.md  requirements.txt  setup.py.in
.github/workflows/: cmake.yml
examples/: atmosphere_api.py  demo.py  wheeler_meteoroids.py  wheeler_paper.ipynb
examples/data/: BenesovEnergyDep_Wheeler-et-al-2018.txt  ChelyabinskEnergyDep_Wheeler-et-al-2018.txt  EnergyDepSOM-readme_Wheeler-et-al-2018.txt  KosiceEnergyDep_Wheeler-et-al-2018.txt  TagishLakeEnergyDep_Wheeler-et-al-2018.txt
fcm/: __init__.py  _cpp_wrapper.py  _fcm_class.py  crater_tools.py  models.py
fcm/atmosphere/: Martian_Density.csv  __init__.py  _density_functions.py  _mars_atm_api.py
include/: atmospheric_density.hpp  fcm.hpp  fragment.hpp  ode.hpp  parameters.hpp  python_api.hpp  solvers.hpp
src/: CMakeLists.txt  atmospheric_density.cpp  fcm.cpp  fragment.cpp  python_api.cpp
tests/cpp/: CMakeLists.txt  atmoshperic_density_tests.cpp  fcm_tests.cpp  fragment_tests.cpp  ode_tests.cpp  python_api_tests.cpp  solvers_tests.cpp
tests/python/: atmosphere_tests.py  convergence_analysis.py  convergence_tests.py  crater_tools_tests.py  fcm_tests.py  sample_cluster.csv
